<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/topLogin"
        />

    <TextView
        android:id="@+id/topLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:hint="@string/username"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/buttonLogin"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/click_me"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>